# Vinegar

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Vinegar.sln  Vinegar.vcxproj  Vinegar.vcxproj.filters
Engine/: Engine.h
Engine/Registries/: Image.cpp  Image.h  Mesh.h  ResourceManager.h  TextureManager.cpp  TextureManager.h
Engine/Resources/: Framebuffer.h  Image.cpp  Image.h  Mesh.h  Texture.h
Engine/Types/: GameObject.h  Types.h
Engine/Util/: Loaders.cpp  Loaders.h  ThreadJob.cpp  ThreadJob.h  UtilFunctions.cpp  UtilFunctions.h  VRUtils.cpp  VRUtils.h
Libraries/bullet3/examples/DeformableDemo/: DeformableMultibody.cpp
include/: Application.h  Camera.h  Entity.h  Model.h  Player.h
include/Backends/: Context.h  Input.h
include/Backends/Context/NX/: Context.h
include/Backends/NX/GL/: NXContext.h
include/Backends/PC/GL/: GLContext.h
include/Engine/: Engine.h
include/Engine/Resources/: Image.h  Mesh.h  Texture.h
include/Engine/Types/: Types.h
include/Engine/Util/: Loaders.h
include/Renderers/: ChunkRenderer.h  CubeRenderer.h  Renderer.h  SFMLRenderer.h
include/Shaders/: Shader.h
include/States/: Basestate.h  Gamestate.h
include/Texture/: Texture.h
include/Util/: ResourceManager.h  math.h
res/Levels/Test/: Test.json
res/Levels/TestEnd/: TestEnd.json
res/Models/: mythra.mtl
res/Shaders/: model.vs  quad.fs
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Main.cpp  Model.h  Player.cpp  Player.h
src/Backends/: Context.h  Input.h
src/Backends/Context/NX/Context/: Context.cpp
src/Backends/Context/NX/Input/: Input.cpp
src/Backends/NX/: NXInput.cpp
src/Backends/NX/GL/: NXContext.cpp  NXContext.h
src/Backends/PC/: PCInput.cpp
src/Backends/PC/GL/: GLContext.cpp  GLContext.h
src/Engine/Registries/: ResourceManager.cpp  TextureManager.cpp
src/Engine/Resources/: Image.cpp  ResourceManager.cpp
src/Engine/Types/: Types.cpp
src/Engine/Util/: Loaders.h  UtilFunctions.cpp
src/Renderers/: ChunkRenderer.cpp  ChunkRenderer.h  ComputeRenderer.cpp  CubeRenderer.cpp  CubeRenderer.h  GeneralRenderer.cpp  GeneralRenderer.h  Renderer.cpp  Renderer.h  SFMLRenderer.cpp
src/Shaders/: Shader.h
src/States/: Gamestate.cpp  Gamestate.h
src/Util/: FileUtil.cpp  math.cpp
src/World/: World.cpp  World.h
src/World/Block/: Block.cpp  Block.h  BlockID.h
src/World/Chunk/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  ChunkMesh.cpp  ChunkMesh.h  ChunkMeshBuilder.cpp  ChunkMeshBuilder.h
